--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -89,7 +89,8 @@
     "class DDPG:\n",
     "    ''' DDPG算法 '''\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound,\n",
-    "                 sigma, actor_lr, critic_lr, tau, gamma, device):\n",
+    "                 sigma, actor_lr, critic_lr, tau, gamma, device, training=True):\n",
+    "        self.training = training\n",
     "        self.actor = PolicyNet(state_dim, hidden_dim,\n",
     "                               action_dim, action_bound).to(device)\n",
     "        self.critic = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
@@ -115,16 +116,11 @@
     "        state = torch.tensor(\n",
     "            np.array(state), dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()  # * 在这里和网络分离了, 因此后面不需要.item()\n",
-    "        # 给动作添加噪声，增加探索, 但是验证和测试时不需要\n",
-    "        action = action + self.sigma * np.random.randn(self.action_dim)\n",
+    "        if self.training:\n",
+    "            # 给动作添加噪声，增加探索, 但是验证和测试时不需要\n",
+    "            action = action + self.sigma * np.random.randn(self.action_dim)\n",
     "        return action\n",
     "\n",
-    "    @torch.no_grad()\n",
-    "    def predict_action(self, state):\n",
-    "        state = torch.tensor(np.array(state), device=self.device, dtype=torch.float32)\n",
-    "        action = self.actor(state).item()\n",
-    "        return action\n",
-    "    \n",
     "    def soft_update(self, net, target_net):\n",
     "        '''将target_net往net方向软更新, 每次更新幅度都很小\n",
     "\n",
