--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -285,9 +285,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "return_list = rl_utils.train_off_policy_agent(env, agent, total_episodes,\n",
-    "                                              replay_buffer, minimal_size,\n",
-    "                                              batch_size)"
+    "return_list = rl_utils.train_off_policy_agent(env, agent, s_epoch, total_epochs, s_episode, total_episodes,\n",
+    "                                              replay_buffer, minimal_size, batch_size, return_list, PATH, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 演示策略"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = rl_utils.show_gym_policy(env_name, agent, 'rgb_array', epochs=400, model_type='AC', if_return=True)"
    ]
   }
  ],
