--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "class PolicyNetContinuous(torch.nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound):\n",
-    "        super(PolicyNetContinuous, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = torch.nn.Linear(state_dim, hidden_dim)\n",
     "        self.fc_mu = torch.nn.Linear(hidden_dim, action_dim)\n",
     "        self.fc_std = torch.nn.Linear(hidden_dim, action_dim)\n",
@@ -60,7 +60,7 @@
     "\n",
     "class QValueNetContinuous(torch.nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim):\n",
-    "        super(QValueNetContinuous, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = torch.nn.Linear(state_dim + action_dim, hidden_dim)\n",
     "        self.fc2 = torch.nn.Linear(hidden_dim, hidden_dim)\n",
     "        self.fc_out = torch.nn.Linear(hidden_dim, 1)\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,20 +91,12 @@
     "class SACContinuous:\n",
     "    ''' 处理连续动作的SAC算法 '''\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound,\n",
-    "                 actor_lr, critic_lr, alpha_lr, target_entropy, tau, gamma,\n",
-    "                 device):\n",
-    "        self.actor = PolicyNetContinuous(state_dim, hidden_dim, action_dim,\n",
-    "                                         action_bound).to(device)  # 策略网络\n",
-    "        self.critic_1 = QValueNetContinuous(state_dim, hidden_dim,\n",
-    "                                            action_dim).to(device)  # 第一个Q网络\n",
-    "        self.critic_2 = QValueNetContinuous(state_dim, hidden_dim,\n",
-    "                                            action_dim).to(device)  # 第二个Q网络\n",
-    "        self.target_critic_1 = QValueNetContinuous(state_dim,\n",
-    "                                                   hidden_dim, action_dim).to(\n",
-    "                                                       device)  # 第一个目标Q网络\n",
-    "        self.target_critic_2 = QValueNetContinuous(state_dim,\n",
-    "                                                   hidden_dim, action_dim).to(\n",
-    "                                                       device)  # 第二个目标Q网络\n",
+    "                 actor_lr, critic_lr, alpha_lr, target_entropy, tau, gamma, device):\n",
+    "        self.actor = PolicyNetContinuous(state_dim, hidden_dim, action_dim, action_bound).to(device)  # 策略网络\n",
+    "        self.critic_1 = QValueNetContinuous(state_dim, hidden_dim, action_dim).to(device)  # 第一个Q网络\n",
+    "        self.critic_2 = QValueNetContinuous(state_dim, hidden_dim, action_dim).to(device)  # 第二个Q网络\n",
+    "        self.target_critic_1 = QValueNetContinuous(state_dim, hidden_dim, action_dim).to(device)  # 第一个目标Q网络\n",
+    "        self.target_critic_2 = QValueNetContinuous(state_dim, hidden_dim, action_dim).to(device)  # 第二个目标Q网络\n",
     "        # 令目标Q网络的初始参数和Q网络一样\n",
     "        self.target_critic_1.load_state_dict(self.critic_1.state_dict())\n",
     "        self.target_critic_2.load_state_dict(self.critic_2.state_dict())\n",
@@ -122,7 +114,7 @@
     "\n",
     "    def take_action(self, state) -> list:\n",
     "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
-    "        action = list(self.actor(state)[0].item())\n",
+    "        action = [self.actor(state)[0].item()]\n",
     "        return action\n",
     "\n",
     "    def calc_target(self, rewards, next_states, dones, truncated):  # 计算目标Q值\n",
@@ -130,8 +122,7 @@
     "        entropy = -log_prob\n",
     "        q1_value = self.target_critic_1(next_states, next_actions)\n",
     "        q2_value = self.target_critic_2(next_states, next_actions)\n",
-    "        next_value = torch.min(q1_value,\n",
-    "                               q2_value) + self.log_alpha.exp() * entropy\n",
+    "        next_value = torch.min(q1_value, q2_value) + self.log_alpha.exp() * entropy\n",
     "        td_target = rewards + self.gamma * next_value * (1 - dones | truncated)\n",
     "        return td_target\n",
     "\n",
@@ -189,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,9 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<6/10>:  39%|███▉      | 39/100 [01:10<01:57,  1.93s/it, episode=530, recent_return=-145.735] "
+     ]
+    }
+   ],
    "source": [
     "return_list = rl_utils.train_off_policy_agent(env, agent, s_epoch, total_epochs, s_episode, total_episodes,\n",
     "                                              replay_buffer, minimal_size, batch_size, return_list, PATH, 3)"
@@ -315,67 +314,6 @@
    "source": [
     "test_list = rl_utils.show_gym_policy(env_name, agent, 'rgb_array', epochs=400, model_type='AC', if_return=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state = env.reset()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(-0.10520175)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.take_action(state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "invalid index to scalar variable.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m env\u001b[39m.\u001b[39;49mstep(agent\u001b[39m.\u001b[39;49mtake_action(state))\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\gymnasium\\wrappers\\time_limit.py:57\u001b[0m, in \u001b[0;36mTimeLimit.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action):\n\u001b[0;32m     47\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Steps through the environment and if the number of steps elapsed exceeds ``max_episode_steps`` then truncate.\u001b[39;00m\n\u001b[0;32m     48\u001b[0m \n\u001b[0;32m     49\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     55\u001b[0m \n\u001b[0;32m     56\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 57\u001b[0m     observation, reward, terminated, truncated, info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m     58\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     60\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_max_episode_steps:\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\gymnasium\\wrappers\\order_enforcing.py:56\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_reset:\n\u001b[0;32m     55\u001b[0m     \u001b[39mraise\u001b[39;00m ResetNeeded(\u001b[39m\"\u001b[39m\u001b[39mCannot call env.step() before calling env.reset()\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 56\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\gymnasium\\wrappers\\env_checker.py:49\u001b[0m, in \u001b[0;36mPassiveEnvChecker.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[39mreturn\u001b[39;00m env_step_passive_checker(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv, action)\n\u001b[0;32m     48\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 49\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\gymnasium\\envs\\classic_control\\pendulum.py:132\u001b[0m, in \u001b[0;36mPendulumEnv.step\u001b[1;34m(self, u)\u001b[0m\n\u001b[0;32m    129\u001b[0m l \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39ml\n\u001b[0;32m    130\u001b[0m dt \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdt\n\u001b[1;32m--> 132\u001b[0m u \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mclip(u, \u001b[39m-\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmax_torque, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmax_torque)[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m    133\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlast_u \u001b[39m=\u001b[39m u  \u001b[39m# for rendering\u001b[39;00m\n\u001b[0;32m    134\u001b[0m costs \u001b[39m=\u001b[39m angle_normalize(th) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m0.1\u001b[39m \u001b[39m*\u001b[39m thdot\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m \u001b[39m+\u001b[39m \u001b[39m0.001\u001b[39m \u001b[39m*\u001b[39m (u\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
-     ]
-    }
-   ],
-   "source": [
-    "env.step(agent.take_action(state))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
