--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -173,11 +173,9 @@
     "    def update(self, transition_dict):\n",
     "        states = torch.tensor(np.array(transition_dict['states']), dtype=torch.float).to(self.device)\n",
     "        if self.cod == 'd':  # 动作是整数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                                   dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "            actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        elif self.cod == 'c':  # 动作是浮点数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                                   dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "            actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        rewards = torch.tensor(np.array(transition_dict['rewards']), dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        next_states = torch.tensor(np.array(transition_dict['next_states']), dtype=torch.float).to(self.device)\n",
     "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
