--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -49,12 +49,12 @@
     "        mu = self.fc_mu(x)\n",
     "        std = F.softplus(self.fc_std(x))\n",
     "        dist = Normal(mu, std)\n",
-    "        normal_sample = dist.rsample()  # rsample()是重参数化采样\n",
+    "        normal_sample = dist.rsample()  # rsample()是重参数化采样, 直接sample会阻碍计算图梯度更新\n",
     "        log_prob = dist.log_prob(normal_sample)\n",
     "        action = torch.tanh(normal_sample)\n",
-    "        # 计算tanh_normal分布的对数概率密度\n",
+    "        # ? 计算tanh_normal分布的对数概率密度\n",
     "        log_prob = log_prob - torch.log(1 - torch.tanh(action).pow(2) + 1e-7)\n",
-    "        action = action * self.action_bound\n",
+    "        action = action * self.action_bound  # 缩放到动作空间\n",
     "        return action, log_prob\n",
     "\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,10 +104,10 @@
     "        self.critic_1_optimizer = torch.optim.Adam(self.critic_1.parameters(), lr=critic_lr)\n",
     "        self.critic_2_optimizer = torch.optim.Adam(self.critic_2.parameters(), lr=critic_lr)\n",
     "        # 使用alpha的log值,可以使训练结果比较稳定\n",
-    "        self.log_alpha = torch.tensor(np.log(0.01), dtype=torch.float)\n",
+    "        self.log_alpha = torch.tensor(np.log(0.01), dtype=torch.float)  # 用于控制熵的重要程度\n",
     "        self.log_alpha.requires_grad = True  # 可以对alpha求梯度\n",
     "        self.log_alpha_optimizer = torch.optim.Adam([self.log_alpha], lr=alpha_lr)\n",
-    "        self.target_entropy = target_entropy  # 目标熵的大小\n",
+    "        self.target_entropy = target_entropy  # ? 目标熵的大小, 这里是-1, 等于负的动作空间\n",
     "        self.gamma = gamma\n",
     "        self.tau = tau\n",
     "        self.device = device\n",
@@ -119,7 +119,7 @@
     "\n",
     "    def calc_target(self, rewards, next_states, dones, truncated):  # 计算目标Q值\n",
     "        next_actions, log_prob = self.actor(next_states)\n",
-    "        entropy = -log_prob\n",
+    "        entropy = -log_prob  # 熵 = -对数动作概率\n",
     "        q1_value = self.target_critic_1(next_states, next_actions)\n",
     "        q2_value = self.target_critic_2(next_states, next_actions)\n",
     "        next_value = torch.min(q1_value, q2_value) + self.log_alpha.exp() * entropy\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
