--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -157,7 +157,9 @@
     "\n",
     "    $Q_{\\pi_{\\theta}}(s^n_t,a^n_t)-V_{\\pi_{\\theta}}(s_t)$\n",
     "\n",
-    "    同时有$E(Q_{\\pi}(s^n_t,a^n_t))=V_{\\pi_{\\theta}}(s_t)$, 因此（后面省去参数$\\theta$角标）\n",
+    "    同时有$E(Q_{\\pi}(s^n_t,a^n_t))=V_{\\pi_{\\theta}}(s_t)$, 又$Q$存在$Q_{\\pi}(s^n_t,a^n_t) = r_t^n+Q_{\\pi}(s_{t+1}^n,a_{t+1}^n)$\n",
+    "    \n",
+    "    因此（后面省去参数$\\theta$角标）\n",
     "\n",
     "    $Q_{\\pi}(s^n_t,a^n_t) = r_t^n+Q_{\\pi}(s_{t+1}^n,a_{t+1}^n) = E(r_t^n+V_{\\pi}(s_{t+1}^n))$\n",
     "\n",
