--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -4,16 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 待办\n",
-    "\n",
-    "- TODO\n",
-    "    - [ ] 实现双深度确定策略 TD3, 参考 `/other_files/TD3.ipynb`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 导入包"
    ]
   },
@@ -174,7 +164,7 @@
     "\n",
     "- DDPG引入软更新概念，即对于目标网络的更新，不再是延迟更新，而是每次只更新一点点; \n",
     "\n",
-    "- 并且把评论员网络变成Q网络，同时输入状态和动作，将它们拼接起来送入网络，之前DQN中没有这样做过，换成Q网络之后，输出一个价值，也就是这个动作状态的价值;\n",
+    "- 并且把评论员网络变成Q网络，同时输入状态和动作，将它们拼接起来送入网络，之前DQN中没有这样做过，换成Q网络之后，输出一个价值，也就是这个动作状态的价值，但是只有确定性策略，动作是确定的，才能这样设计网络;\n",
     "\n",
     "- 策略/演员网络直接输出动作，也就是确定性深度策略梯度中`确定性`的来源，之前是输出一个概率，现在是直接确定动作;"
    ]
