--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -172,11 +172,10 @@
     "        truncated = torch.tensor(\n",
     "            transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
-    "        # 评论员还是时序差分更新, 但这次评论员鼠鼠变成Q网络了, 需要输入状态和动作, 动作由演员选择\n",
     "        # * 技巧3: 平滑动作计算, 加入了噪声的目标动作\n",
     "        noise = (torch.randn_like(actions) * self.policy_noise)  # 构造加入目标动作的噪声, rand_like保持shape\n",
     "        noise = noise.clip(-self.noise_clip, self.noise_clip)  # 裁剪噪声避免过大\n",
-    "        next_action = (self.target_actor(next_states) + noise).clamp(-self.action_scale, self.action_scale)\n",
+    "        next_action = (self.target_actor(next_states) + noise).clip(-self.action_scale, self.action_scale)\n",
     "        target_q1 = self.target_critic_1(next_states, next_action).detach()\n",
     "        target_q2 = self.target_critic_2(next_states, next_action).detach()\n",
     "        # 取两个网络较小值\n",
@@ -184,10 +183,8 @@
     "        q_targets = rewards + self.gamma * next_q_values * (1 - (dones | truncated))\n",
     "\n",
     "        # 两个评论员梯度下降\n",
-    "        critic_loss_1 = torch.mean(F.mse_loss(\n",
-    "            self.critic_1(states, actions), q_targets))\n",
-    "        critic_loss_2 = torch.mean(F.mse_loss(\n",
-    "            self.critic_2(states, actions), q_targets))\n",
+    "        critic_loss_1 = torch.mean(F.mse_loss(self.critic_1(states, actions), q_targets))\n",
+    "        critic_loss_2 = torch.mean(F.mse_loss(self.critic_2(states, actions), q_targets))\n",
     "        self.critic_1_optimizer.zero_grad()\n",
     "        self.critic_2_optimizer.zero_grad()\n",
     "        critic_loss_1.backward()\n",
