--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -28,8 +28,7 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import rl_utils\n",
-    "import os\n",
-    "import time"
+    "import os"
    ]
   },
   {
