--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +49,11 @@
     "        mu = self.fc_mu(x)\n",
     "        std = F.softplus(self.fc_std(x))\n",
     "        dist = Normal(mu, std)\n",
-    "        normal_sample = dist.rsample()  # rsample()是重参数化采样, 直接sample会阻碍计算图梯度更新\n",
-    "        log_prob = dist.log_prob(normal_sample)\n",
+    "        # rsample()是重参数化采样, 输出一个采样值(动作), 直接sample会阻碍计算图梯度更新\n",
+    "        normal_sample = dist.rsample()\n",
+    "        log_prob = dist.log_prob(normal_sample)  # 输出的是该动作的对数概率密度\n",
     "        action = torch.tanh(normal_sample)\n",
-    "        # action经过tanh的变换，策略不再是高斯分布，重新计算对数概率, 但是没看懂推导\n",
-    "        # https://www.zhihu.com/question/378879098/answer/1100628614\n",
+    "        # action经过tanh的变换，策略不再是高斯分布，重新计算对数概率\n",
     "        log_prob = log_prob - torch.log(1 - action.pow(2) + 1e-7)\n",
     "        action = action * self.action_bound  # 缩放到动作空间\n",
     "        return action, log_prob\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
     "torch.manual_seed(0)\n",
     "\n",
     "# SAC算法相关\n",
-    "PATH = 'checkpoints/SAC_PDv1.pt'\n",
+    "PATH = 'checkpoints/SAC_PDv1_te.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "alpha_lr = 3e-4\n",
@@ -434,11 +434,11 @@
    "source": [
     "# ✅SAC基本思想\n",
     "\n",
-    "SAC的公式推导还没完全理解, 但是基本思路是, 对网络输入状态, 网络给出动作和该动作的对数概率, 而把动作的对数概率取负就是熵, 熵越大, 代表该动作的不确定性越大, 也就是发生概率较小, 反过来, 熵越小, 说明确定性越大, 下面这个目标就是希望回报和熵都尽可能大，熵前面有一个$\\alpha$调整熵的重要性, 也称为`温度`.\n",
+    "基本思路是, 对网络输入状态, 网络给出动作和该动作的对数概率, 而把动作的对数概率取负就是熵, 熵越大, 代表该动作的不确定性越大, 也就是发生概率较小, 反过来, 熵越小, 说明确定性越大, SAC模型的目标就是希望策略的回报和熵都尽可能大，熵前面有一个$\\alpha$调整熵的重要性, 也称为`温度`。\n",
     "$$\n",
     "\\pi^* = \\underset{\\pi}{\\operatorname{argmax}}\\mathbb{E}_{\\pi}\\left[\\underset{t}{\\sum}r(s_t,a_t)+\\alpha\\mathcal{H}(\\pi(\\cdot|s_t)) \\right]\n",
     "$$\n",
-    "也可以写成目标函数\n",
+    "也可以写成总的训练目标\n",
     "$$\n",
     "J(\\pi)=\\sum^{T}_{t=0}\\mathbb{E}_{(s_t,a_t)\\sim\\rho_\\pi}[r(s_t,a_t)+\\alpha\\mathcal{H}(\\pi(\\cdot|s_t))]\n",
     "$$\n",
@@ -457,9 +457,10 @@
     "因此Q函数的贝尔曼方程跟以前类似 \n",
     "$$\n",
     "\\begin{align}\n",
-    "Q^\\pi_{soft}(s,a) & = r(s,a)+\\gamma\\mathbb{E}_{(s^\\prime,a^\\prime)\\sim\\rho_\\pi}[Q(s^\\prime,a^\\prime)-\\alpha\\log(\\pi(a^\\prime|s^\\prime))]\\\\\n",
+    "Q^\\pi_{soft}(s,a) \n",
+    "& = r(s,a)+\\gamma\\mathbb{E}_{(s^\\prime,a^\\prime)\\sim\\rho_\\pi}[Q(s^\\prime,a^\\prime)-\\alpha\\log(\\pi(a^\\prime|s^\\prime))]\\\\\n",
     "\n",
-    "\t\t\t\t& = r(s,a)+\\gamma\\mathbb{E}_{s^\\prime\\sim\\rho}[V^\\pi_{soft}(s^\\prime)]\n",
+    "& = r(s,a)+\\gamma\\mathbb{E}_{s^\\prime\\sim\\rho}[V^\\pi_{soft}(s^\\prime)]\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -468,11 +469,12 @@
     "$$\n",
     "\\begin{align}\n",
     "J_Q(\\theta) &= \\mathbb{E}_{(s_t,a_t,s_{t+1})\\sim \\mathcal{D}}\\left[\\frac{1}{2}(Q_\\theta(s_t,a_t)-(r(s_t,a_t)+\\gamma V_{\\bar{\\theta}}(s_{t+1})))^2\\right] \\\\\n",
-    "&=\\mathbb{E}_{(s_t,a_t,s_{t+1})\\sim \\mathcal{D}}\\left[\\frac{1}{2}(Q_\\theta(s_t,a_t)-(r(s_t,a_t)+\\gamma (Q_{\\bar \\theta}(s_{t+1},a_{t+1})-\\alpha\\log(\\pi(a_{t+1}|s_{t+1})))))^2\\right]\n",
+    "&=\\mathbb{E}_{(s_t,a_t,s_{t+1})\\sim \\mathcal{D}}\\left[\\frac{1}{2}(Q_\\theta(s_t,a_t)-(r(s_t,a_t)+\\gamma (Q_{\\bar \\theta}(s_{t+1},a_{t+1})-\n",
+    "\\alpha\\log(\\pi(a_{t+1}|s_{t+1})))^2\\right]\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "其中$Q_{\\bar \\theta}$是两个评论员网络给出的价值评价的较小的那个\n",
+    "其中$Q_{\\bar \\theta}$是两个评论员网络给出的价值评价的较小的那个，这里对$\\theta$求梯度是很简单的。\n",
     "\n",
     "😯 $V_{soft}$, 即策略网络Policy的**目标函数**为\n",
     "\n",
@@ -483,43 +485,73 @@
     "&= \\mathbb{E}_{s_t\\sim\\mathcal{D},a\\sim\\pi_\\phi}\\left[\\log\\pi_\\phi(a_t|s_t)-\\frac{1}{\\alpha}Q_{\\bar \\theta}(s_t,a_t)+\\log Z(s_t)\\right]\n",
     "\\end{align}\n",
     "$$\n",
+    "其中KL散度公式：\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "D_{KL}(P||Q) &= \\int_x p(x)\\operatorname{log}\\frac{P(x)}{Q(x)}\\operatorname{d}x \\\\\n",
+    "&= \\mathbb{E}\\left[\\operatorname{log}\\frac{P(x)}{Q(x)} \\right]\n",
     "\n",
-    "由于求梯度时也不需要对$Z$求梯度, 而且本来也不知道$Z$, 所以代码里面去掉了, 代码里面还全部同时乘以了$\\alpha$, 这里就不乘了, 直接写为\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "由于求梯度时也不需要对$Z$求梯度，而且本来也不知道$Z$，所以代码里面去掉了， [原论文](https://arxiv.org/pdf/1801.01290.pdf)思想也就是这样，位于第四页右侧上面，代码里面还全部同时乘以了$\\alpha$，这里就不乘了，直接写为\n",
     "\n",
     "$$\n",
     "J_\\pi(\\phi) = \\mathbb{E}_{s_t\\sim\\mathcal{D},a\\sim\\pi_\\phi}\\left[\\log\\pi_\\phi(a_t|s_t)-\\frac{1}{\\alpha}Q_{\\bar \\theta}(s_t,a_t)\\right]\n",
     "$$\n",
     "\n",
-    "这个目标函数是KL散度，基本上是试图使我们的策略函数$\\pi_k$的分布看起来更像是由另一个函数Z标准化的Q函数的指数分布；其中$a_t$是重参数化来的，目的是让梯度正常更新，$\\epsilon$是从高斯分布采样的噪音\n",
+    "这个目标函数是KL散度，表示两个分布之间的差异程度，减小这个目标函数就是试图使策略函数$\\pi_k$的分布看起来更像是由函数Z标准化的Q函数的指数分布；其中$a_t$是重参数化来的，目的是让梯度正常更新，$\\epsilon$是从高斯分布采样的噪音。对策略目标函数的参数$\\phi$求导时，与$Z$无关，但是与Q有关，因为Q中的$a_t$是从策略中重参数化取得的，如下面公式\n",
     "\n",
     "$$\n",
     "a_t=f_\\phi(\\epsilon_t;s_t)=f^\\mu_\\phi(s_t)+\\epsilon_t\\cdot f^\\mu_\\phi(s_t)\n",
     "$$\n",
+    "在求熵的时候，动作$u$原本是从正态分布采样的，但是经过$a=\\operatorname{tanh}(u)$压缩处理，不再是正态分布，需要重新计算概率，需要注意的是，这里采样到的单个动作的概率就是概率密度，而不是概率分布，这里的$\\pi$和$\\mu$都是概率密度函数，推导如下\n",
     "\n",
-    "对策略目标函数的参数$\\phi$求导时，与$Z$无关，但是与Q有关，因为Q中的$a_t$是从策略中重参数化取得的。\n",
-    "\n",
-    "😯 $\\alpha$也是要调整的, 存在以下约束优化, 其中$\\mathcal{H}_0$是可以调整的参数\n",
-    "\n",
-    "$$\n",
-    "\\underset{\\pi}{\\operatorname{max}} \\mathbb{E}\\left[\\underset{t}{\\sum}r(s_t, a_t) \\right] ~~~~ \\operatorname{s.t.} ~~ \\mathbb{E}_{(s_t,a_t)\\sim\\rho_\\pi} \\left[-\\operatorname{log}(\\pi(a_t|s_t)) \\right] \\geq \\mathcal{H}_0\n",
-    "$$\n",
-    "\n",
-    "解出其目标函数为\n",
     "$$\n",
     "\\begin{align}\n",
-    "J(\\alpha)\n",
-    "&= \\mathbb{E}_{a_t\\sim\\pi_t}\\left[-\\alpha \\log \\pi_t(a_t|\\pi_t)-\\alpha\\mathcal{H}_0\\right] \\\\\n",
-    "&= \\mathbb{E}_{a_t\\sim\\pi_t}\\left[\\alpha(-\\log \\pi_t(a_t|\\pi_t)-\\mathcal{H}_0)\\right]\n",
+    "a &= \\operatorname{tanh}(u) \\\\\n",
+    "\\pi(a|s)\\operatorname{d}a&=\\mu(u|s)\\operatorname{d}u\\\\\n",
+    "\\pi(a|s) \n",
+    "&= \\mu(u|s)(\\frac{\\operatorname{d}a}{\\operatorname{d}u})^{-1}\\\\\n",
+    "其中:\\frac{\\operatorname{d}a}{\\operatorname{d}u} &= 1-\\operatorname{tanh}^2u \\\\\n",
+    "\\pi(a|s) &= \\mu(u|s)(1-\\operatorname{tanh}^2u)^{-1} \\\\\n",
+    "两边加对数:\\operatorname{log}\\pi(a|s) \n",
+    "&= \\operatorname{log}\\mu(u|s)-\\sum^D_{i=1}\\operatorname{log}(1-\\operatorname{tanh}^2(u_i)) \\\\\n",
+    "&= \\operatorname{log}\\mu(u|s)-\\sum^D_{i=1}\\operatorname{log}(1-a_i^2)\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
+    "\n",
+    "😯 $\\alpha$也是要调整的, 存在以下约束优化, 其中$\\mathcal{H}_0$是可以调整的参数。\n",
+    "\n",
+    "$$\n",
+    "\\underset{\\pi}{\\operatorname{max}} \\mathbb{E}\\left[\\underset{t}{\\sum}r(s_t, a_t) \\right] ~~~~ \\operatorname{s.t.} ~~~~ \\mathbb{E}_{(s_t,a_t)\\sim\\rho_\\pi} \\left[-\\operatorname{log}(\\pi(a_t|s_t)) \\right] \\geq \\mathcal{H}_0\n",
+    "$$\n",
+    "\n",
+    "约束优化问题中没有$\\alpha$，它是作为拉格朗日乘子出现的，需要转化为对偶问题，参考[第十三章 SAC 算法](https://johnjim0816.com/joyrl-book/#/ch13/main?id=%e8%87%aa%e5%8a%a8%e8%b0%83%e8%8a%82%e6%b8%a9%e5%ba%a6%e5%9b%a0%e5%ad%90)，未完全理解，解出其目标函数为 #问题\n",
+    "$$\n",
+    "\n",
+    "\\begin{align}\n",
+    "\n",
+    "J(\\alpha)\n",
+    "\n",
+    "&= \\mathbb{E}_{a_t\\sim\\pi_t}\\left[-\\alpha \\log \\pi_t(a_t|s_t)-\\alpha\\mathcal{H}_0\\right] \\\\\n",
+    "\n",
+    "&= \\mathbb{E}_{a_t\\sim\\pi_t}\\left[\\alpha(-\\log \\pi_t(a_t|s_t)-\\mathcal{H}_0)\\right]\n",
+    "\n",
+    "\\end{align}\n",
+    "\n",
+    "$$\n",
     "其中$-\\log \\pi_t(a_t|\\pi_t)$也就是熵`entropy`，对$\\alpha$求导，就等于小括号里面的动作熵减去目标熵，所以这就是要使得动作熵靠近目标熵，使得$J(\\alpha)$变小。\n",
     "\n",
-    "参考下面策略目标函数，动作熵太大，大于目标熵了，梯度就是正的，$\\alpha$目标函数在梯度下降时就会减小$\\alpha$，就是指动作确定性很低，需要减小$\\alpha$使得模型专注于获得更高的回报；而动作熵太小，就调整$\\alpha$变大，$\\alpha$变大就倾向于要求下面动作熵变大，等于希望动作概率降低，让模型重视探索。\n",
+    "参考下面策略目标函数，动作熵太大，大于目标熵了，梯度就是正的，$\\alpha$目标函数在梯度下降时就会减小$\\alpha$，就是指策略给的动作的概率比较低，拿不准应该怎么办，需要减小$\\alpha$使得模型专注于获得更高的回报，也就是尽可能提升动作确定性；而动作熵太小，就意味着策略对某一个动作过于肯定，容易造成过拟合，就调整$\\alpha$变大，$\\alpha$变大就倾向于要求动作熵变大，等于希望动作概率降低，让模型重视探索。\n",
     "\n",
     "$$\n",
     "\\pi^* = \\underset{\\pi}{\\operatorname{argmax}}\\mathbb{E}_{\\pi}\\left[\\underset{t}{\\sum}r(s_t,a_t)+\\alpha\\mathcal{H}(\\pi(\\cdot|s_t)) \\right]\n",
-    "$$"
+    "$$\n",
+    "## 目标熵 \n",
+    "\n",
+    " [原论文](https://arxiv.org/pdf/1801.01290.pdf)认为连续动作的目标熵等于动作空间的负值，torchrl中默认为`torch.prod(n_actions)`，另一篇[论文](https://arxiv.org/pdf/1910.07207.pdf)给出离散SAC，目标熵设置为$0.98(-\\operatorname{log}(\\frac{1}{|A|}))$，依据未说明，可能和交叉熵类似，但是总的来说不建议将SAC应用于离散动作环境。"
    ]
   },
   {
