--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -173,15 +173,22 @@
     "            return [action.item()]\n",
     "\n",
     "    def update(self, transition_dict):\n",
-    "        states = torch.tensor(np.array(transition_dict['states']), dtype=torch.float).to(self.device)\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), \n",
+    "                              dtype=torch.float).to(self.device)\n",
     "        if self.cod == 'd':  # 动作是整数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.int64).view(-1, 1).to(self.device)\n",
+    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
+    "                                   dtype=torch.int64).view(-1, 1).to(self.device)\n",
     "        elif self.cod == 'c':  # 动作是浮点数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        rewards = torch.tensor(np.array(transition_dict['rewards']), dtype=torch.float).view(-1, 1).to(self.device)\n",
-    "        next_states = torch.tensor(np.array(transition_dict['next_states']), dtype=torch.float).to(self.device)\n",
-    "        dones = torch.tensor(np.array(transition_dict['dones']), dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        truncated = torch.tensor(np.array(transition_dict['truncated']), dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
+    "                                   dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
+    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
+    "                                   dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
+    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
+    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
     "        if self.cod == 'd':  # 离散\n",
     "            td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
