把连续动作和离散动作代码拆开

--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -126,11 +126,10 @@
    "source": [
     "class PPO:\n",
     "    ''' PPO算法,采用截断方式 '''\n",
-    "    def __init__(self, cod: str, state_dim: int, hidden_dim: int, action_dim: int, \n",
+    "    def __init__(self, state_dim: int, hidden_dim: int, action_dim: int, \n",
     "                 actor_lr: float, critic_lr: float, gamma: float, lmbda: float, \n",
     "                 epochs: int, eps: float, device: str):\n",
     "        '''\n",
-    "        `cod`: 连续'c', 离散'd'\\\\\n",
     "        `state_dim`: 状态空间大小\\\\\n",
     "        `hidden_dim`: 隐藏层神经元数量, 若要改隐藏层数量, 需要同步改网络\\\\\n",
     "        `action_dim`: 动作空间, 如果是连续动作, 注意调整初始化参数中的action_space\\\\\n",
@@ -143,13 +142,7 @@
     "        `device`: 设备, 'cuda'或'cpu'\\\\\n",
     "        '''\n",
     "        \n",
-    "        assert cod in ['d', 'c'], '动作类型错误'\n",
-    "        self.cod = cod\n",
-    "        if self.cod == 'd':  # 离散网络\n",
-    "            self.actor = PolicyNet(state_dim, hidden_dim, action_dim).to(device)\n",
-    "        elif self.cod == 'c':  # 连续网络\n",
-    "            self.actor = PolicyNetContinuous(state_dim, hidden_dim, action_dim).to(device)\n",
-    "        \n",
+    "        self.actor = PolicyNet(state_dim, hidden_dim, action_dim).to(device)\n",
     "        self.critic = ValueNet(state_dim, hidden_dim).to(device)\n",
     "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
     "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=critic_lr)\n",
@@ -161,26 +154,16 @@
     "\n",
     "    def take_action(self, state) -> list:\n",
     "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
-    "        if self.cod == 'd':  # 离散动作用分类概率分布\n",
-    "            probs = self.actor(state)\n",
-    "            action_dist = torch.distributions.Categorical(probs)\n",
-    "            action = action_dist.sample()\n",
-    "            return action.item()\n",
-    "        elif self.cod == 'c':  # 连续动作用正态分布\n",
-    "            mu, sigma = self.actor(state)\n",
-    "            action_dist = torch.distributions.Normal(mu, sigma)\n",
-    "            action = action_dist.sample()\n",
-    "            return [action.item()]\n",
+    "        probs = self.actor(state)\n",
+    "        action_dist = torch.distributions.Categorical(probs)\n",
+    "        action = action_dist.sample()\n",
+    "        return action.item()\n",
     "\n",
     "    def update(self, transition_dict):\n",
     "        states = torch.tensor(np.array(transition_dict['states']), \n",
     "                              dtype=torch.float).to(self.device)\n",
-    "        if self.cod == 'd':  # 动作是整数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
     "                                   dtype=torch.int64).view(-1, 1).to(self.device)\n",
-    "        elif self.cod == 'c':  # 动作是浮点数\n",
-    "            actions = torch.tensor(np.array(transition_dict['actions']), \n",
-    "                                   dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
     "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
     "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
@@ -190,30 +173,15 @@
     "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
     "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
-    "        if self.cod == 'd':  # 离散\n",
-    "            td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
-    "            td_delta = td_target - self.critic(states)\n",
-    "            advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
-    "            # 所谓的另一个演员就是原来的演员的初始状态\n",
-    "            old_log_probs = torch.log(self.actor(states).gather(1, actions)).detach()\n",
-    "        elif self.cod == 'c':  # 连续\n",
-    "            rewards = (rewards + 8.0) / 8.0  # 和TRPO一样, 对奖励进行修改, 方便训练\n",
-    "            td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
-    "            td_delta = td_target - self.critic(states)\n",
-    "            advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
-    "            mu, std = self.actor(states)\n",
-    "            action_dists = torch.distributions.Normal(mu.detach(), std.detach())\n",
-    "            old_log_probs = action_dists.log_prob(actions)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
+    "        td_delta = td_target - self.critic(states)\n",
+    "        advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
+    "        # 所谓的另一个演员就是原来的演员的初始状态\n",
+    "        old_log_probs = torch.log(self.actor(states).gather(1, actions)).detach()\n",
     "\n",
     "        # 因为每次更新是有限度的，不允许一次更新很远，因此需要多次更新才能达到较好效果，这样调整更精细\n",
     "        for _ in range(self.epochs):\n",
-    "            if self.cod == 'd':\n",
-    "                log_probs = torch.log(self.actor(states).gather(1, actions))\n",
-    "            elif self.cod == 'c':\n",
-    "                mu, std = self.actor(states)\n",
-    "                action_dists = torch.distributions.Normal(mu, std)\n",
-    "                log_probs = action_dists.log_prob(actions)\n",
-    "            \n",
+    "            log_probs = torch.log(self.actor(states).gather(1, actions))\n",
     "            # 重要性, 本来是概率直接相除, 但是取e为底, 自然对数概率相减的幂, 结果是一样的\n",
     "            ratio = torch.exp(log_probs - old_log_probs)  # 重要性采样系数\n",
     "            surr1 = ratio * advantage # 重要性采样\n",
@@ -313,7 +281,7 @@
     "action_dim = env.action_space.n\n",
     "\n",
     "\n",
-    "agent = PPO('d' ,state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
+    "agent = PPO(state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
    ]
   },
   {
@@ -472,6 +440,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PPOcontinuous:\n",
+    "    ''' PPO算法,采用截断方式 '''\n",
+    "    def __init__(self,state_dim: int, hidden_dim: int, action_dim: int, \n",
+    "                 actor_lr: float, critic_lr: float, gamma: float, lmbda: float, \n",
+    "                 epochs: int, eps: float, device: str):\n",
+    "        '''\n",
+    "        `state_dim`: 状态空间大小\\\\\n",
+    "        `hidden_dim`: 隐藏层神经元数量, 若要改隐藏层数量, 需要同步改网络\\\\\n",
+    "        `action_dim`: 动作空间, 如果是连续动作, 注意调整初始化参数中的action_space\\\\\n",
+    "        `actor_lr`: 演员梯度上升学习率\\\\\n",
+    "        `critic_lr`: 评论员梯度上升学习率\\\\\n",
+    "        `gamma`: 似乎可以去掉，这一项仅用于调整计算优势advantage时，额外调整折算奖励的系数\\\\\n",
+    "        `lmbda`: # 时序差分学习率，也作为折算奖励的系数之一\\\\\n",
+    "        `epochs`: PPO内迭代训练多少次\\\\\n",
+    "        `eps`: 截断范围, 一般0.1或0.2\\\\\n",
+    "        `device`: 设备, 'cuda'或'cpu'\\\\\n",
+    "        '''\n",
+    "        \n",
+    "        self.actor = PolicyNetContinuous(state_dim, hidden_dim, action_dim).to(device)\n",
+    "        self.critic = ValueNet(state_dim, hidden_dim).to(device)\n",
+    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
+    "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=critic_lr)\n",
+    "        self.gamma = gamma  # 时序差分学习率\n",
+    "        self.lmbda = lmbda\n",
+    "        self.epochs = epochs  # 一条序列的数据用来训练轮数\n",
+    "        self.eps = eps  # PPO中截断范围的参数\n",
+    "        self.device = device\n",
+    "\n",
+    "    def take_action(self, state) -> list:\n",
+    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
+    "        mu, sigma = self.actor(state)\n",
+    "        action_dist = torch.distributions.Normal(mu, sigma)\n",
+    "        action = action_dist.sample()\n",
+    "        return [action.item()]\n",
+    "\n",
+    "    def update(self, transition_dict):\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), \n",
+    "                              dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
+    "                                   dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
+    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
+    "                                   dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
+    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
+    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        \n",
+    "        rewards = (rewards + 8.0) / 8.0  # 和TRPO一样, 对奖励进行修改, 方便训练\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
+    "        td_delta = td_target - self.critic(states)\n",
+    "        advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
+    "        mu, std = self.actor(states)\n",
+    "        action_dists = torch.distributions.Normal(mu.detach(), std.detach())\n",
+    "        old_log_probs = action_dists.log_prob(actions)\n",
+    "\n",
+    "        # 因为每次更新是有限度的，不允许一次更新很远，因此需要多次更新才能达到较好效果，这样调整更精细\n",
+    "        for _ in range(self.epochs):\n",
+    "            mu, std = self.actor(states)\n",
+    "            action_dists = torch.distributions.Normal(mu, std)\n",
+    "            log_probs = action_dists.log_prob(actions)\n",
+    "            \n",
+    "            # 重要性, 本来是概率直接相除, 但是取e为底, 自然对数概率相减的幂, 结果是一样的\n",
+    "            ratio = torch.exp(log_probs - old_log_probs)  # 重要性采样系数\n",
+    "            surr1 = ratio * advantage # 重要性采样\n",
+    "            surr2 = torch.clip(ratio, 1 - self.eps, 1 + self.eps) * advantage # 截断的重要性采样\n",
+    "            # PPO损失函数，取上面两者的最小值，加负号，取均值就是损失\n",
+    "            actor_loss = torch.mean(-torch.min(surr1, surr2)) \n",
+    "            # 评论员更新目标当作标签常数，加.detach()\n",
+    "            critic_loss = torch.mean(F.mse_loss(self.critic(states), td_target.detach()))\n",
+    "            \n",
+    "            self.actor_optimizer.zero_grad()\n",
+    "            self.critic_optimizer.zero_grad()\n",
+    "            actor_loss.backward()\n",
+    "            critic_loss.backward()\n",
+    "            self.actor_optimizer.step()\n",
+    "            self.critic_optimizer.step()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -515,7 +569,7 @@
     "state_dim = env.observation_space.shape[0]\n",
     "action_dim = env.action_space.shape[0]  # 连续动作空间\n",
     "\n",
-    "agent = PPO('c' ,state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
+    "agent = PPO(state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
    ]
   },
   {
