--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -569,7 +569,7 @@
     "state_dim = env.observation_space.shape[0]\n",
     "action_dim = env.action_space.shape[0]  # 连续动作空间\n",
     "\n",
-    "agent = PPO(state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
+    "agent = PPOcontinuous(state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, lmbda, epochs, eps, device)"
    ]
   },
   {
