--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -199,7 +199,7 @@
     "torch.manual_seed(0)\n",
     "\n",
     "# SAC算法相关\n",
-    "PATH = 'checkpoints/SAC_PDv1_te.pt'\n",
+    "PATH = 'checkpoints/SAC_PDv1.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
     "alpha_lr = 3e-4\n",
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 检查点函数"
+    "# 检查点"
    ]
   },
   {
