--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -84,9 +84,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy import dtype, ndarray\n",
-    "\n",
-    "\n",
     "class TD3:\n",
     "    ''' DDPG算法 '''\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, \n",
@@ -150,8 +147,8 @@
     "\n",
     "        参数说明\n",
     "        ----------\n",
-    "        net : torch.nn.module\n",
-    "        target_net : torch.nn.module\n",
+    "        - net : torch.nn.module\n",
+    "        - target_net : torch.nn.module\n",
     "        '''\n",
     "        for param_target, param in zip(target_net.parameters(), net.parameters()):\n",
     "            param_target.data.copy_(\n",
@@ -244,8 +241,8 @@
     "PATH = 'checkpoints/TD3_PDv1.pt'\n",
     "actor_lr = 3e-4\n",
     "critic_lr = 3e-3\n",
-    "total_episodes = 200\n",
-    "total_epochs = 10\n",
+    "total_episodes = 200  # 总回合\n",
+    "total_epochs = 10  # 总轮数\n",
     "gamma = 0.98\n",
     "tau = 0.005  # 软更新参数, tau越小更新幅度越小\n",
     "buffer_size = 10000\n",
@@ -255,8 +252,7 @@
     "policy_noise = 0.2  # 策略网络的噪声\n",
     "noise_clip = 0.5  # 裁剪噪音避免过大\n",
     "policy_freq = 3\n",
-    "device = torch.device(\n",
-    "    \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "\n",
     "# 环境相关\n",
@@ -272,7 +268,7 @@
     "action_dim = env.action_space.shape[0]\n",
     "action_space = env.action_space  # 动作最大值\n",
     "\n",
-    "# 其他\n",
+    "# 定义agent\n",
     "agent = TD3(state_dim, hidden_dim, action_dim, action_space, sigma, policy_noise, \n",
     "            noise_clip, actor_lr, critic_lr, tau, gamma, policy_freq, device)"
    ]
