--- a/强化学习笔记/15_模仿学习.ipynb
+++ b/强化学习笔记/15_模仿学习.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,11 @@
    "source": [
     "# 生成对抗模仿学习\n",
     "\n",
-    "generative adversarial imitation learning，GAIL"
+    "generative adversarial imitation learning，GAIL\n",
+    "\n",
+    "前面还是要写PPO算法并且定义agent, 还要生成专家数据，存储专家状态和动作表\n",
+    "\n",
+    "agent还是要自己和环境交互的"
    ]
   },
   {
@@ -357,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Discriminator(torch.nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim, action_dim):\n",
-    "        super(Discriminator, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = torch.nn.Linear(state_dim + action_dim, hidden_dim)\n",
     "        self.fc2 = torch.nn.Linear(hidden_dim, 1)\n",
     "\n",
@@ -383,9 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "进度条: 100%|██████████| 500/500 [03:31<00:00,  2.36it/s, return=500.000]\n"
+     ]
+    }
+   ],
    "source": [
     "class GAIL:\n",
     "    def __init__(self, agent, state_dim, action_dim, hidden_dim, lr_d):\n",
@@ -395,22 +407,24 @@
     "\n",
     "    def learn(self, expert_s, expert_a, agent_s, agent_a, next_s, dones, truncated):\n",
     "        expert_states = torch.tensor(expert_s, dtype=torch.float).to(device)\n",
-    "        expert_actions = torch.tensor(expert_a).to(device)\n",
+    "        expert_actions = torch.tensor(expert_a, dtype=torch.int64).to(device)\n",
     "        agent_states = torch.tensor(agent_s, dtype=torch.float).to(device)\n",
-    "        agent_actions = torch.tensor(agent_a).to(device)\n",
+    "        agent_actions = torch.tensor(agent_a, dtype=torch.int64).to(device)\n",
     "        # 把动作分为两类的独热编码\n",
     "        expert_actions = F.one_hot(expert_actions, num_classes=2).float()\n",
     "        agent_actions = F.one_hot(agent_actions, num_classes=2).float()\n",
     "\n",
     "        expert_prob = self.discriminator(expert_states, expert_actions)  # 专家状态动作概率\n",
     "        agent_prob = self.discriminator(agent_states, agent_actions)  # agent状态动作概率\n",
+    "        # * 二元交叉熵损失 BCELoss, 训练判别器, 专家轨迹标记为0, agent轨迹标记为1, 刚开始agent基本是随意选择动作的\n",
+    "        # * 这里让目标函数梯度下降, 可以让agent与环境交互的行为分布接近专家的交互分布\n",
     "        discriminator_loss = torch.nn.BCELoss()(agent_prob, torch.ones_like(agent_prob)) \\\n",
     "            + torch.nn.BCELoss()(expert_prob, torch.zeros_like(expert_prob))\n",
     "        self.discriminator_optimizer.zero_grad()\n",
     "        discriminator_loss.backward()\n",
     "        self.discriminator_optimizer.step()\n",
     "\n",
-    "        rewards = -torch.log(agent_prob).detach().cpu().numpy()\n",
+    "        rewards = -torch.log(agent_prob).detach().cpu().numpy()  # ? 为什么这样设置奖励\n",
     "        transition_dict = {\n",
     "            'states': agent_s,\n",
     "            'actions': agent_a,\n",
@@ -432,7 +446,7 @@
     "with tqdm(total=n_episode, desc=\"进度条\") as pbar:\n",
     "    for i in range(n_episode):\n",
     "        episode_return = 0\n",
-    "        state = env.reset()\n",
+    "        state = env.reset()[0]\n",
     "        done = truncated = False\n",
     "        state_list = []\n",
     "        action_list = []\n",
@@ -441,7 +455,7 @@
     "        truncated_list = []\n",
     "        while not (done | truncated):\n",
     "            action = agent.take_action(state)\n",
-    "            next_state, reward, done, _ = env.step(action)\n",
+    "            next_state, reward, done, truncated, _ = env.step(action)\n",
     "            state_list.append(state)\n",
     "            action_list.append(action)\n",
     "            next_state_list.append(next_state)\n",
@@ -456,6 +470,13 @@
     "            pbar.set_postfix({'return': '%.3f' % np.mean(return_list[-10:])})\n",
     "        pbar.update(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
