--- a/强化学习笔记/15_模仿学习.ipynb
+++ b/强化学习笔记/15_模仿学习.ipynb
@@ -388,7 +388,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": ""
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -477,7 +481,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": ""
+    }
+   },
    "outputs": [
     {
      "data": {
