--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -166,7 +166,7 @@
     "            # 👆 tensor.max(1)[0], (1)是指按行取最大,(0)按列; [0]是取值,[1]取序号,等于argmax\n",
     "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones | truncated))  # TD误差目标\n",
     "        dqn_loss = torch.mean(F.mse_loss(q_values, q_targets))  # 均方误差损失函数\n",
-    "        self.optimizer.zero_grad()  # 🟠 PyTorch中默认梯度会积累,比如多次求梯度会加总,这里需要显式将梯度置为0\n",
+    "        self.optimizer.zero_grad()  # * 🟠 PyTorch中默认梯度会积累,比如多次求梯度会加总,这里需要显式将梯度置为0\n",
     "        dqn_loss.backward()  # 反向传播更新参数\n",
     "        self.optimizer.step()  # 执行优化\n",
     "\n",
