修改文件名

--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 深度Q网络\n",
+    "\n",
+    "只能用于离散动作，异策略训练"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 导入包"
    ]
   },
@@ -145,7 +154,7 @@
     "            action = np.random.randint(self.action_dim)\n",
     "        else:\n",
     "            state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
-    "            action = self.q_net(state).argmax().item() # 转动作序号\n",
+    "            action = self.q_net(state).argmax().item() # 转成动作序号\n",
     "        return action\n",
     "\n",
     "    def update(self, transition_dict):\n",
