--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -382,7 +382,7 @@
     }
    ],
    "source": [
-    "s_epoch, s_episode, epsilon, return_list = read_ckp('checkpoints/ckpt_dqn_PDv1.pt')\n",
+    "s_epoch, s_episode, epsilon, return_list = read_ckp('checkpoints/dqn_PDv1.pt')\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon,\n",
     "            target_update, device)"
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_Double_dqn_PDv1.pt'\n",
+    "CKP_PATH = 'checkpoints/Double_dqn_PDv1.pt'\n",
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DoubleDQN')\n",
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_Dueling_dqn_PDv1.pt'\n",
+    "CKP_PATH = 'checkpoints/Dueling_dqn_PDv1.pt'\n",
     "s_epoch, epsilon, return_list = read_ckp(CKP_PATH)\n",
     "replay_buffer = rl_utils.ReplayBuffer(buffer_size)\n",
     "agent = DQN(state_dim, hidden_dim, action_dim, lr, gamma, epsilon, target_update, device, 'DuelingDQN')\n",
