--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CKP_PATH = 'checkpoints/ckpt_A2C_CPv1.pt'\n",
+    "CKP_PATH = 'checkpoints/A2C_CPv1.pt'\n",
     "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
    ]
   },
@@ -304,11 +304,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 连续动作"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PolicyNet(torch.nn.Module):\n",
+    "    def __init__(self, state_dim, hidden_dim, action_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = torch.nn.Linear(state_dim, hidden_dim)\n",
+    "        self.fc2 = torch.nn.Linear(hidden_dim, action_dim)  # 输出每个动作对应的概率\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        return F.softmax(self.fc2(x), dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ValueNet(torch.nn.Module):\n",
+    "    def __init__(self, state_dim, hidden_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = torch.nn.Linear(state_dim, hidden_dim)\n",
+    "        self.fc2 = torch.nn.Linear(hidden_dim, 1) # 输出状态对应的价值\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        return self.fc2(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A2C相关\n",
+    "actor_lr = 1e-3\n",
+    "critic_lr = 1e-2\n",
+    "total_epochs = 20\n",
+    "total_episodes = 100\n",
+    "gamma = 0.98\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "print('device: ', device)\n",
+    "\n",
+    "# 环境相关\n",
+    "env_name = 'CartPole-v1'\n",
+    "env = gym.make(env_name)\n",
+    "torch.manual_seed(0)\n",
+    "\n",
+    "# 神经网络相关\n",
+    "state_dim = env.observation_space.shape[0]\n",
+    "hidden_dim = 128\n",
+    "action_dim = env.action_space.n\n",
+    "\n",
+    "agent = ActorCritic(state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ActorCritic:\n",
+    "    def __init__(self, state_dim, hidden_dim, action_dim, actor_lr, critic_lr, gamma, device):\n",
+    "        # 策略网络\n",
+    "        self.actor = PolicyNet(state_dim, hidden_dim, action_dim).to(device)\n",
+    "        self.critic = ValueNet(state_dim, hidden_dim).to(device)  # 价值网络\n",
+    "        # 策略网络优化器\n",
+    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
+    "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=critic_lr)  # 价值网络优化器\n",
+    "        self.gamma = gamma\n",
+    "        self.device = device\n",
+    "\n",
+    "    def take_action(self, state):\n",
+    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
+    "        probs = self.actor(state.unsqueeze(0))\n",
+    "        action_dist = torch.distributions.Categorical(probs)  # 根据给定概率创建一个分类的分布\n",
+    "        action = action_dist.sample()  # 从分布中采样一个类别，这里是动作\n",
+    "        return action.item()  # 取到的动作序号是tensor, 转成普通python数字\n",
+    "\n",
+    "    def update(self, transition_dict):\n",
+    "        states = torch.tensor(np.array(transition_dict['states']), \n",
+    "                              dtype=torch.float).to(self.device)\n",
+    "        actions = torch.tensor(np.array(transition_dict['actions']), \n",
+    "                               dtype=torch.int64).view(-1, 1).to(self.device)\n",
+    "        rewards = torch.tensor(np.array(transition_dict['rewards']), \n",
+    "                               dtype=torch.float).view(-1, 1).to(self.device)\n",
+    "        next_states = torch.tensor(np.array(transition_dict['next_states']), \n",
+    "                                   dtype=torch.float).to(self.device)\n",
+    "        dones = torch.tensor(np.array(transition_dict['dones']), \n",
+    "                             dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
+    "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
+    "\n",
+    "        # 时序差分目标\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
+    "        td_delta = td_target - self.critic(states)  # 时序差分误差\n",
+    "        log_probs = torch.log(self.actor(states).gather(1, actions))\n",
+    "        # 评论员/价值网络均方误差损失函数, td_target仅作为标量\n",
+    "        critic_loss = torch.mean(F.mse_loss(self.critic(states), td_target.detach()))  \n",
+    "        # 演员/策略网络误差, td_delta是从td_target来的, 因此也.detach(), 仅作为标量\n",
+    "        actor_loss = torch.mean(-log_probs * td_delta.detach())  \n",
+    "        self.critic_optimizer.zero_grad()\n",
+    "        self.actor_optimizer.zero_grad()\n",
+    "        critic_loss.backward()  # 计算价值网络的梯度\n",
+    "        actor_loss.backward()  # 计算策略网络的梯度\n",
+    "        self.critic_optimizer.step()  # 更新价值网络的参数\n",
+    "        self.actor_optimizer.step()  # 更新策略网络的参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_ckp(ckp_path):\n",
+    "    if os.path.exists(ckp_path):\n",
+    "        checkpoint = torch.load(ckp_path)\n",
+    "        s_epoch = checkpoint['epoch']\n",
+    "        s_episode = checkpoint['episode']\n",
+    "        agent.actor.load_state_dict(checkpoint['actor_best_weight'])\n",
+    "        agent.critic.load_state_dict(checkpoint['critic_best_weight'])\n",
+    "        return_list = checkpoint['return_list']\n",
+    "        return s_epoch, s_episode, return_list\n",
+    "    else:\n",
+    "        s_epoch = 0\n",
+    "        s_episode = 0\n",
+    "        return_list = []\n",
+    "        return s_epoch, s_episode, return_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CKP_PATH = 'checkpoints/A2C_PDv1.pt'\n",
+    "s_epoch, s_episode, return_list = read_ckp(CKP_PATH)"
+   ]
   }
  ],
  "metadata": {
