--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# DDPG算法\n",
+    "\n",
+    "只能用于连续动作，异策略训练"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 导入包"
    ]
   },
@@ -137,8 +146,9 @@
     "        truncated = torch.tensor(\n",
     "            transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
-    "        # 评论员还是时序差分更新, 但这次评论员鼠鼠变成Q网络了, 需要输入状态和动作, 动作由演员选择\n",
-    "        # 之前都是价值网络, 只需要输入状态\n",
+    "        # 评论员还是时序差分更新, 评论员现在叫Q网络, 但是和之前价值网络一样\n",
+    "        # 不同点是需要输入状态和动作, 动作由演员选择, DQN里面的Q网络不需要输入动作\n",
+    "        # 这也是和DQN的主要区别和改进之处\n",
     "        next_q_values = self.target_critic(next_states, self.target_actor(next_states))\n",
     "        q_targets = rewards + self.gamma * next_q_values * (1 - (dones | truncated))\n",
     "        critic_loss = torch.mean(F.mse_loss(self.critic(states, actions), q_targets))\n",
